--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-aws-cdk-lib==2.154.1
+aws-cdk-lib>=2.191.0
 constructs>=10.0.0
-cdklabs.generative_ai_cdk_constructs==0.1.258
+cdklabs.generative_ai_cdk_constructs==0.1.303
